<resources>
    <string name="app_name">MOV Apps</string>
    <string name="leati_perkenalan">Lewati Perkenalan</string>
    <string name="lanjutkan">LANJUTKAN</string>
    <string name="now_playing">Now Playing</string>
    <string name="lihat_tiket">Lihat Tiket</string>
    <string name="home">Home</string>
    <string name="pre_sale">Pre Sale</string>
    <string name="cashless">Cashless</string>
    <string name="happywatching">Happy Watching</string>
    <string name="pre_sale_desc">Tidak khawatir ketinggalan terbaru</string>
    <string name="now_playing_desc">Lebih mudah untuk mengetahui film yang sedang tampil</string>
    <string name="cashless_desc">Gunakan e-wallet untuk transaksi tiket nonton</string>
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="input_username">Masukkan Username</string>
    <string name="password">Password</string>
    <string name="input_password">Masukkan Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="input_email">Masukkan Email</string>
    <string name="masuk_akun">MASUK AKUN</string>
    <string name="upload_later">UPLOAD NANTI</string>
    <string name="photo">Photo</string>
    <string name="welcome">"Selamat Datang, "</string>
    <string name="save_continue">SIMPAN DAN LANJUTKAN</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="storyboard">Storyboard</string>
    <string name="whos_played">Who\'s Played</string>
    <string name="pilih_bangku">Pilih Bangku</string>
    <string name="pilihbangku_text">Pilih Bangku</string>
    <string name="judul_flm">Judul Film</string>
    <string name="layar_bioskop">LAYAR BIOSKOP</string>
    <string name="beli_tiket">Beli Tiket</string>
    <string name="checkout">Checkout</string>
    <string name="bayar_sekarang">Bayar Sekarang</string>
    <string name="batalkan">Batalkan</string>
    <string name="when">When</string>
    <string name="datetime">Date and Time</string>
    <string name="cinema">Cinema</string>
    <string name="items">Items</string>
    <string name="ewallet">E - Wallet</string>
    <string name="total_balance">Total Balance</string>
    <string name="desc_bill">Total Yang Harus Dibayar</string>
    <string name="notice_balance">Saldo pada e-wallet kamu tidak mencukupi untuk melakukan transaksi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data">Simpan Data</string>
    <string name="text_saldo">Saldo Tersedia</string>
    <string name="daftar_transaksi">Daftar Transaksi</string>
    <string name="my_history">My History</string>
    <string name="history">History</string>
    <string name="daftar_akun">Daftar Akun Baru</string>
    <string name="keluar">Tutup</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_movie">Ketika Alita terbangun tanpa ingatan tentang siapa dia di dunia masa depan yang tidak dia kenal, dia  ditangkap oleh Ido, seorang dokter yang penuh  kasih yang menyadari bahwa di suatu tempat dalam</string>
    <string name="desc_barcode">Silahkan melakukan scanning pada counter tiket terdekat</string>
    <string name="setting">Settings</string>
    <string name="my_wallet">My Wallet</string>
    <string name="edt_profile">Edit Profile</string>
    <string name="chg_language">Change Language</string>
    <string name="help">Help</string>
    <string name="happywatching_desc">Tiket sudah berhasil dibeli dan selamat menikmati film</string>
    <string name="input_nama">Masukkan Nama</string>
    <string name="today_s">Hari Ini</string>
    <string name="quick_print">Quick Print</string>
    <string name="tap_icon_qr_for_scan">Tap Icon QR For Scan</string>
    <string name="seat_number">Seat No.</string>
    <string name="alert_uname">Silahkan Input Username Anda</string>
    <string name="kursi_nomor">Seat No.</string>
    <string name="alert_pass">Silahkan Input Password Anda</string>
    <string name="find_user">User tidak ditemukan</string>
    <string name="welcome_toast">Selamat Datang</string>
    <string name="toast_wrongpass">Password Anda Salah</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">Berhasil Logout</string>
    <string name="Ticket">Ticket</string>
    <string name="close">Close</string>
</resources>
